# gateway_hub

./: .gitignore  main.py  pyproject.toml
gateway_edge_server/: __init__.py  storage.py  task.py
gateway_forwarding/: __init__.py  config.py  publishers.py  service.py  storage.py
gateway_interfaces/: __init__.py  config.py  data_storage.py  service.py  storage.py
gateway_ipc/: README.md  __init__.py  client.py  config.py  message_protocol.py  monitor_storage.py  task.py
metacrust_gateway_web_console.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
web_console/: __init__.py  engine_client.py  insights_data.py  main.py  network_runtime.py  routes.py
web_console/static/css/: app.css
web_console/static/js/: app.js
web_console/templates/: base.html  connectivity.html  console_layout.html  dashboard.html  edge_server.html  forwarding.html  insights.html  interfaces.html  login.html  monitor.html  system.html
