[project]
name = "metacrust-gateway-hub"
version = "0.1.0"
description = "MetaCrust Gateway high-level web and service hub"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "itsdangerous>=2.2,<3.0",
    "jinja2>=3.1,<4.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
